# distributed-in-memory-database

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
client/: pyproject.toml
client/client/: client.py  database_client.py  geoip.py
client/tests/: test_client.py
master/: Dockerfile  pyproject.toml  server.py
master/master/: master_server.py  storage.py
master/tests/: test_master_server.py
slave/: Dockerfile  pyproject.toml
slave/slave/: edge_node.py
slave/tests/: test_edge_node.py
