[tool.poetry]
name = "client"
version = "0.1.1"
description = "Client library for the Distributed Key-Value In-Memory Storage system"
authors = ["olhamish <olgami1402@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
