[tool.poetry]
name = "slave"
version = "0.1.0"
description = "Edge Node for Distributed In-Memory Key-Value Store"
authors = ["StrivingToAdoniss <gorovyi.sv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.2"
Flask = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
